--- a/index.html
+++ b/index.html
@@ -1,3 +1,28 @@
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyBK1zNqxpgkebrKq0yNdOVcaEKwTXa0TOs",
+    authDomain: "giphy-api-73d09.firebaseapp.com",
+    databaseURL: "https://giphy-api-73d09.firebaseio.com",
+    projectId: "giphy-api-73d09",
+    storageBucket: "giphy-api-73d09.appspot.com",
+    messagingSenderId: "600097466717",
+    appId: "1:600097466717:web:edd0b7d76e456e8b24e0b4",
+    measurementId: "G-29WVTEPX4S"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 
 <!DOCTYPE html>
