--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="col-sm-12">
             <div class="container">
                 <div class="wrapper">
-                  <div class="jumbotron" style="background-image: url(Assets/new_background.jpg); background-size: 100%;">
+                  <div class="jumbotron" style="background-image: url(assets/new_background.jpg); background-size: 100%;">
                     <div>
                         <h1>
                           GIPHY TREAT!
