--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <div class="jumbotron" style="background-image: url(assets/new_background.jpg); background-size: 100%;">
                     <div>
                         <h1>
-                          GIPHY TREAT!ß
+                          GIPHY TREAT!
                         </h1>
                         <div class="form-container">
                           <form class="gif-form">  
